# march-madness

./: README.md  app.py  model_gb.py  model_svr.py  model_svr2.py  pyproject.toml  requirements.txt
data/: March_Madness_Dataset.csv  README.md  combined_stats.parquet  espn_logos.parquet  mom_bracket.csv
data/game_stats/advanced_stats/: 2011_akron.csv  2011_alabama-birmingham.csv  2011_alabama-state.csv  2011_arizona.csv  2011_arkansas-little-rock.csv  2011_belmont.csv  2011_boston-university.csv  2011_brigham-young.csv  2011_bucknell.csv  2011_butler.csv  2011_california-santa-barbara.csv  2011_cincinnati.csv  2011_clemson.csv  2011_connecticut.csv  2011_duke.csv  2011_florida-state.csv  2011_florida.csv  2011_george-mason.csv  2011_georgetown.csv  2011_georgia.csv  2011_gonzaga.csv  2011_hampton.csv  2011_illinois.csv  2011_indiana-state.csv  2011_kansas-state.csv  2011_kansas.csv  2011_kentucky.csv  2011_long-island-university.csv  2011_louisville.csv  2011_marquette.csv  2011_memphis.csv  2011_michigan-state.csv  2011_michigan.csv  2011_missouri.csv  2011_morehead-state.csv  2011_nevada-las-vegas.csv  2011_north-carolina-asheville.csv  2011_north-carolina.csv  2011_northern-colorado.csv  2011_notre-dame.csv  (+978 more)
data/game_stats/basic_stats/: 2011_akron.csv  2011_arizona.csv  (+1016 more)
data/player_stats/: 2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
model/: model.joblib  train_model.py
src/: config.py  march_madness_data.py  model.py  todays_scores.py
www/: styles.css
(+5105 files in other folders)
