[project]
name = "march-madness-squares"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "shiny>=1.3.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
